Added circlci config file modifications to deal with ssh keys

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,12 @@ deploy:
   steps:
     - add_ssh_keys:
         fingerprints:
-          - "f8:8b:bb:1e:0d:88:dd:94:06:fd:f5:d1:6f:be:63:9d"
+          - "10:bc:9e:73:25:26:92:f1:c7:54:29:b1:5f:44:25:cc"
     - checkout
     - run:
         name: Push Master to Production
         command: |
-          git push https://github.com/lighthouse-labs/scheduler.git master:production
+          git push https://github.com/t5krishn/scheduler.git master:production
 
 
 workflows:
